# legal-rag-agent

./: .gitignore  README.md  main.py  pyproject.toml
app/: agent.py  config.py  generation.py  indexing.py  ingestion.py  main.py  retrieval.py  schemas.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
storage/chroma/: chroma.sqlite3
